--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ decorator==5.1.0
 defusedxml==0.7.1
 entrypoints==0.3
 fbpca==1.0
+flake8==4.0.1
 future==0.18.2
 html5lib==1.1
 idna==3.3
@@ -42,6 +43,7 @@ lightkurve==2.0.11
 MarkupSafe==2.0.1
 matplotlib==3.4.3
 matplotlib-inline==0.1.3
+mccabe==0.6.1
 memoization==0.4.0
 mimeparse==0.1.3
 mistune==0.8.4
@@ -63,8 +65,10 @@ Pillow==8.4.0
 prometheus-client==0.12.0
 prompt-toolkit==3.0.21
 ptyprocess==0.7.0
+pycodestyle==2.8.0
 pycparser==2.20
 pyerfa==2.0.0.1
+pyflakes==2.4.0
 Pygments==2.10.0
 pyparsing==2.4.7
 pyrsistent==0.18.0
